--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <div>Div #2</div>
     <div>Div #3</div>
     <hr>
-    <span>Snan #1</span>
+    <div class="span">Snan #1</div>
     <br>
-    <span>Snan #2</span>
+    <div class="span">Snan #2</div>
     <br>
-    <span>Snan #3</span>
+    <div class="span">Snan #3</div>
 </body>
 
 </html>
