--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
     <div>Div #2</div>
     <div>Div #3</div>
     <hr>
-    <div class="span">Snan #1</div>
-    <br>
-    <div class="span">Snan #2</div>
-    <br>
-    <div class="span">Snan #3</div>
+    <span>Snan #1</div>
+    <span>Snan #2</div>
+    <span>Snan #3</div>
 </body>
 
 </html>
