--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <div>Div #2</div>
     <div>Div #3</div>
     <hr>
-    <span>Snan #1</div>
-    <span>Snan #2</div>
-    <span>Snan #3</div>
+    <span>Snan #1</span>
+    <span>Snan #2</span>
+    <span>Snan #3</span>
 </body>
 
 </html>
