--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             margin-left: 50px;
         }
         
-        a[lang|="en-"] {
+        a[lang|="en"] {
             font-size: 10px;
         }
         
