--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             color: green;
         }
         
-        [title~="super-popular"] {
+        [title~="popular"] {
             font-size: 24px;
         }
     </style>
