--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -23,7 +23,7 @@
             margin-left: 50px;
         }
         
-        [lang|="en"] {
+        a[lang|="en"] {
             font-size: 10px;
         }
         
