--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             margin-left: 16px;
         }
         
-        .paragraphs p:nth-child(odd) {
+        .paragraphs p:nth-of-type(odd) {
             background-color: gray;
         }
     </style>
@@ -47,7 +47,7 @@
         <div>Div</div>
         <p>Paragraph #3</p>
         <p>Paragraph #4</p>
-        <div>
+    </div>
 </body>
 
 </html>
