--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             color: white;
         }
         
-        li:nth-child(even) {
+        li:nth-child(even)>span {
             margin-left: 16px;
         }
         
@@ -47,7 +47,7 @@
         <div>Div</div>
         <p>Paragraph #3</p>
         <p>Paragraph #4</p>
-    </div>
+        <div>
 </body>
 
 </html>
