--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <title>Псевдоэлементы</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU=" crossorigin="anonymous" />
     <style>
-        /* .theory::first-letter {
+        .theory::first-letter {
             font-size: 36px;
             margin-left: 16px;
             color: orange;
         }
-         */
         
         .theory::first-line {
             font-size: 24px;
