--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             border: 3px solid black;
             padding: 50px;
             background-color: aqua;
+            margin: 50px;
         }
     </style>
 </head>
