--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             border: 3px solid black;
             padding: 50px;
             background-color: aqua;
-            margin: 50px;
+            margin-bottom: 50px;
         }
     </style>
 </head>
