--- a/index.html
+++ b/index.html
@@ -22,13 +22,7 @@
             clear: both;
         }
         
-        .container1 {
-            float: left;
-            width: 50%;
-            box-sizing: border-box;
-        }
-        
-        .container2 {
+        .container {
             float: left;
             width: 50%;
             box-sizing: border-box;
@@ -47,7 +41,7 @@
 </head>
 
 <body>
-    <section class="container1">
+    <section class="container">
         <h2>Big text</h2>
         <div class="red square"></div>
         <div class="green square"></div>
@@ -57,7 +51,7 @@
             stack to the right, until they filled the containing box, after which they would wrap to the next line.</p>
         <footer class="footer"></footer>
     </section>
-    <section class="container2">
+    <section class="container">
         <h2>Small text</h2>
         <div class="red square"></div>
         <div class="green square"></div>
