--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         .h2 {
             display: flex;
             justify-content: center;
-            margin-left: 16px;
-            margin-right: 16px;
+            margin-top: 16px;
+            margin-bottom: 16px;
         }
         
         .nav_news {
