--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         .h2 {
             display: flex;
             justify-content: center;
-            margin-top: 16px;
-            margin-bottom: 16px;
+            /* margin-top: 16px;
+            margin-bottom: 16px; */
         }
         
         .nav_news {
@@ -74,6 +74,8 @@
             padding: 0;
             margin-left: 16px;
             list-style-type: none;
+            margin-top: 16px;
+            margin-bottom: 16px;
         }
         
         .nav_news_item {
