--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
         .aside {
             width: 200px;
             background-color: grey;
+            display: flex;
+            flex-direction: column;
         }
         
         .h2 {
