--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
             margin: 0;
             padding: 0;
             list-style-type: none;
+            margin-top: 16px;
+            margin-bottom: 16px;
         }
         
         .nav_news_item {
